# verifact

./: .coveragerc  .dockerignore  .env-example  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  =0.0.15  CONTRIBUTING.md  Dockerfile  Dockerfile.simple  FEVER_TESTING.md  LICENSE  README.md  app.py  chainlit.md  chainlit.toml  clean_imports.py  cli.py  create_dockerfile.sh  create_issues_md.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  linting_issues.md  main.py  mycmd.txt  pyproject.toml  pytest.ini  requirements.txt  results.txt  ruff_issues.json  ruff_issues.txt  run_tests_with_coverage.sh  setup.cfg  setup_environment.py  test_agents.py  test_api.py
.cursor/: mcp.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
configs/: README.md  env.template  test_config.json  validation.yml
configs/nginx/: verifact.conf
data/: trust_sources.txt
docs/: DEVELOPMENT.md  README.md  SETUP.md  SUPABASE_MIGRATION.md  configuration.md  configuration_system.md  docker_deployment.md  evidence_hunter_improvements.md  feedback_system.md
docs/agents/: claim_detector.md  evidence_hunter.md  openai_agents_integration.md  verdict_writer.md
docs/api/: README.md  api_documentation.md
docs/examples/: README.md  basic_usage.md
docs/testing/: test_action_plan.md  verifact_test_summary.md
docs/tutorials/: README.md
examples/: README.md  openai_agents_example.py
notebooks/: openai_sdk_tutorial.ipynb
reports/: api_test_20250520_023046.json  verifact_test_report_20250520_022958.json
scripts/: README.md  benchmark_cache.py  clean_imports.py  create_feedback_table.sql  create_secret.py  docker-compose-helper.sh  init-db.sql
src/: __init__.py  cli.py  config.py  main.py  verifact_manager.py  verifact_manager_openrouter.py
src/agents/: README.md  __init__.py  base.py  dto.py  factory.py  interfaces.py  orchestrator.py  transition.py
src/agents/claim_detector/: __init__.py  detector.py  domain_classifier.py  entity_extractor.py  models.py  utils.py
src/agents/evidence_hunter/: __init__.py  hunter.py
src/agents/examples/: migration_example.py  pipeline_testing.py  pipeline_usage.py
src/agents/verdict_writer/: __init__.py  writer.py
src/api/: README.md  admin.py  factcheck.py  factcheck_batch.py  feedback.py  middleware.py
src/models/: README.md  __init__.py  factcheck.py  feedback.py  security.py  user.py
src/pipeline/: README.md  __init__.py  factcheck_pipeline.py
src/tests/: README.md  __init__.py  conftest.py  evidence_scoring.py  get_test_evidence_data.py  test_api.py  test_claim_detector.py  test_claim_edge_cases.py  test_claim_types.py  test_complex_claims.py  test_data_flow.py  test_database.py  test_embeddings.py  test_error_recovery.py  test_evidence_caching.py  test_evidence_hunter.py  test_faithfulness.py  test_fixtures.py  test_performance.py  test_verdict_writer.py  test_verifact_manager.py  tests_factcheck_endpoint.py  tests_health_endpoint.py  tests_search_endpoint.py
src/tests/agents/: __init__.py  conftest.py  test_agent_detector.py  test_claim_detector.py  test_evidence_hunter.py  test_verdict_writer.py
src/tests/api/: __init__.py  conftest.py  test_api.py  test_factcheck_endpoint.py
src/tests/data/: test_claims.json  test_evidence.json  test_verdicts.json
src/tests/fixtures/: README.md  __init__.py  claims.py  evidence.py  verdicts.py
src/tests/integration/: __init__.py  conftest.py  test_db_integration.py  test_end_to_end.py  test_factcheck_pipeline.py  test_pipeline_integration.py
src/tests/mocks/: mock_agents.py
src/tests/models/: __init__.py  conftest.py
src/tests/performance/: __init__.py  conftest.py  test_benchmark_pipeline.py
src/tests/system/: __init__.py  conftest.py  test_verifact.py
src/tests/utils/: __init__.py  conftest.py  mock_data_factory.py  performance_utils.py  test_db_utils.py  test_model_config.py  test_search_tools.py
src/tests/verifact_agents/: test_verdict_writer.py
src/ui/: __init__.py  agent_manager.py  app.py  components.py  events.py  utils.py
src/utils/: README.md  __init__.py  db.py  db_schema.py  error_handling.py  exceptions.py  logger.py  metrics.py  model_config.py  openrouter_config.py  rate_limiter.py  validation.py  version.py
src/utils/async/: __init__.py  async_processor.py  priority_queue.py  retry.py
src/utils/async_utils/: __init__.py  priority_queue.py  retry.py
src/utils/cache/: __init__.py  cache.py
src/utils/db/: __init__.py  api_keys.py  db.py  db_init.py  pool.py  users.py
src/utils/health/: __init__.py  checkers.py
src/utils/logging/: __init__.py  logger.py  logging_config.py  metrics.py  structured_logger.py
src/utils/metrics/: __init__.py  db_metrics.py
src/utils/models/: __init__.py  model_config.py
src/utils/search/: __init__.py  search_tools.py
src/utils/security/: __init__.py  credentials.py  encrypted_fields.py  encryption.py  hashing.py
src/utils/validation/: __init__.py  config.py  exceptions.py  sanitizer.py  validation.py  validator.py
src/verifact_agents/: README.md  __init__.py  base.py  claim_detector.py  claim_rules.py  dto.py  evidence_hunter.py  factory.py  interfaces.py  orchestrator.py  pipeline.py  text_processor.py  transition.py  verdict_writer.py
src/verifact_agents/claim_detector/: __init__.py  detector.py  domain_classifier.py  entity_extractor.py  utils.py
src/verifact_agents/evidence_hunter/: __init__.py  hunter.py
src/verifact_agents/examples/: migration_example.py  pipeline_testing.py  pipeline_usage.py
src/verifact_agents/verdict_writer/: __init__.py  writer.py
temp-tests/: check_environment.py  env_test_summary.md  run_tests.py  test_basic.py  test_claim_detector.py  test_env_access.py  test_env_loading.py  test_evidence_hunter.py  test_imports.py  test_model_config.py  test_simple.py
tests/: conftest.py
tests/verifact_agents/: test_verdict_writer.py
